# ijkplayerPlus

./: init-android.sh
android/contrib/tools/: do-compile-ffmpeg.sh  do-detect-env.sh
android/ijkplayer/: build.gradle  gradle.properties  settings.gradle
android/ijkplayer/gradle/wrapper/: gradle-wrapper.properties
android/ijkplayer/ijkplayer-arm64/: build.gradle
android/ijkplayer/ijkplayer-arm64/src/main/: AndroidManifest.xml
android/ijkplayer/ijkplayer-arm64/src/main/jni/: Application.mk
android/ijkplayer/ijkplayer-armv5/src/main/jni/: Application.mk
android/ijkplayer/ijkplayer-armv7a/: build.gradle
android/ijkplayer/ijkplayer-armv7a/src/main/jni/: Application.mk
android/ijkplayer/ijkplayer-cmake/: build.gradle
android/ijkplayer/ijkplayer-cmake/src/main/cpp/: CMakeLists.txt
android/ijkplayer/ijkplayer-cmake/src/main/cpp/ijkj4a/: Android.mk
android/ijkplayer/ijkplayer-cmake/src/main/cpp/ijkplayer/: Android.mk  ff_ffinc.h  ff_ffplay.c  ff_ffplay_def.h
android/ijkplayer/ijkplayer-cmake/src/main/cpp/ijkplayer/android/: ijkplayer_jni.c
android/ijkplayer/ijkplayer-cmake/src/main/cpp/ijkplayer/android/pipeline/: ffpipenode_android_mediacodec_vdec.c
android/ijkplayer/ijkplayer-cmake/src/main/cpp/ijkplayer/ijkavformat/: allformats.c  ijkasync.c  ijkio.c  ijkioandroidio.c  ijkioffio.c  ijkiourlhook.c  ijklivehook.c  ijklongurl.c  ijkurlhook.c
android/ijkplayer/ijkplayer-cmake/src/main/cpp/ijksdl/: Android.mk
android/ijkplayer/ijkplayer-cmake/src/main/cpp/ijksdl/android/: ijksdl_android_jni.c  ijksdl_android_jni.h
android/ijkplayer/ijkplayer-cmake/src/test/java/com/coder/ijkplayer_cmake/: ExampleUnitTest.java
android/ijkplayer/ijkplayer-example/: build.gradle
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/activities/: FileExplorerActivity.java
android/ijkplayer/ijkplayer-exo/: build.gradle
config/: module-default.sh  module-lite-hevc.sh  module-lite.sh
